--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nanny-services-website",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://rmlyaaa.github.io/nanny-services-website/",
   "type": "module",
   "scripts": {
     "dev": "vite",
