--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
