--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
           npm install
           npm run lint:js
           npm run build
+          node --version
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
