--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/checkout@v2.3.1
 
       - name: Install, lint, build 🔧
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
         run: |
           npm install
           npm run lint:js
