--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
-        run: |
+      - run: |
           npm install
           npm run lint:js
           npm run build
-          node --version
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
