--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "firebase": "^10.13.1",
@@ -21,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1",
+    "redux": "^5.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
