--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.3",
     "firebase": "^10.13.1",
     "i": "^0.3.7",
+    "moment": "^2.30.1",
     "npm": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
